# meetups

./: README.md
2016-04-11/: readme.md
2016-05-9/: great-delta.md
2016-06-13/: rust-1.9-changes.md  rust-lifetimes.odp
2016-07-11/: README.md  arewewebyet.md
2016-08-8/rust-concurrency-talk/: Cargo.toml  README.md  nodemon.json  tango-build.rs
2016-08-8/rust-concurrency-talk/html/: index.html
2016-08-8/rust-concurrency-talk/src/: slide_00_intro.md  slide_00_intro.rs  slide_01_setup.md  slide_01_setup.rs  slide_02_standard_library.md  slide_02_standard_library.rs  slide_03_coroutines.md  slide_03_coroutines.rs  slide_04_futures.md  slide_04_futures.rs  slide_05_async_await.md  slide_05_async_await.rs  x_lib.md  x_lib.rs
